# PACS

./: CMakeLists.txt  README.md
Laboratory-1/src/: HelloWorld.cpp  HelloWorld2.cpp  func.cpp  mult.cpp
Laboratory-2/src/: eigenmmv.cpp  matrixmult.cpp
Laboratory-3/: CMakeLists.txt  pi_taylor_parallel.cc  pi_taylor_parallel_async.cc  pi_taylor_sequential.cc
Laboratory-4/: CMakeLists.txt  smallpt_thread_pool.cpp
Laboratory-4/include/: join_threads.hpp  thread_pool.hpp  threadsafe_queue.hpp
Laboratory-5/: basic_environ.c
Laboratory-5/CImg/: README.txt
Laboratory-5/power_of_two/: basic_environ_a.c  kernel.cl
cmake/: AddPacsExecutable.cmake
code_examples/: CMakeLists.txt  atomic_synchronization.cc  hello_pacs.cc  hello_pacs_args.cc  hello_pacs_two_threads.cc  lambda_example.cc  mutex.cc  mutex_lock_guard.cc  packaged_task.cc  parallel_sum_future.cc  pi_taylor  saxpy.cc  saxpy_future.cc  saxpy_ranges.cc  saxpy_scaling.cc  saxpy_scaling_ranges.cc  snippet_condition_variable.cc  snippet_deep_copy.cc  snippet_future.cc  snippet_lock_guard.cc  snippet_mutex.cc  snippet_mutex_exception.cc  snippet_mutex_long_critical_section.cc  snippet_mutex_short_critical_section.cc  snippet_mutex_sync.cc  snippet_mutex_sync_sleep.cc  snippet_nested_mutex.cc  snippet_nested_recursive_mutex.cc  snippet_out_of_order_mutex_adquisition.cc  snippet_out_of_order_mutex_adquisition_std_lock.cc  snippet_parallel_sinx.cc  snippet_producer_consumer.cc  snippet_promise.cc  snippet_queue.cc  snippet_thread_parameter_problem.cc  snippet_thread_safe_queue.cc  synchronization.cc  thread_joinable.cc
problems/: problems.md
